fixed spacing around button

--- a/styles/cloudDeskStyles.css
+++ b/styles/cloudDeskStyles.css
@@ -29,7 +29,7 @@
 
 /* tablets */
 @media (min-width: 575px) {
-  .hero-grid-left {
+  .hero-grid-left, .hero-grid-right {
     margin-top: 9rem;
   }
 
@@ -92,7 +92,7 @@
 
 /*laptops & desktops */
 @media (min-width: 991px) {
-  .hero-grid-left {
+  .hero-grid-left, .hero-grid-right {
     margin-top: 0;
   }
 
